--- a/Products/appsettings.json
+++ b/Products/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Products;Integrated Security=True;"
+    "DefaultConnection": "Server=MININT-8B1FB6D\\SQLEXPRESS;Database=Products;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
