--- a/Products/Dockerfile
+++ b/Products/Dockerfile
@@ -2,6 +2,13 @@ FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
+COPY ["localhost.crt", "/https/"]
+COPY ["localhost.key", "/https/"]
+ENV ASPNETCORE_URLS="https://+;http://+"
+ENV ASPNETCORE_HTTPS_PORT=443
+ENV ASPNETCORE_Kestrel__Certificates__Default__Password=""
+ENV ASPNETCORE_Kestrel__Certificates__Default__Path=/https/localhost.crt
+ENV ASPNETCORE_Kestrel__Certificates__Default__KeyPath=/https/localhost.key
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
