--- a/Products/Dockerfile
+++ b/Products/Dockerfile
@@ -2,6 +2,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
+EXPOSE 7231
 COPY ["localhost.crt", "/https/"]
 COPY ["localhost.key", "/https/"]
 ENV ASPNETCORE_URLS="https://+;http://+"
