--- a/Products/appsettings.json
+++ b/Products/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=F1\\SQLEXPRESS;Database=Products;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=db;Database=Products;User Id=ssu;Password=ssu;"
   }
 }
