--- a/Products/appsettings.json
+++ b/Products/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db;Database=Products;User Id=SA;Password=NewStrongP@ssw0rd;"
+    "DefaultConnection": "Server=db;Database=Products;User Id=SA;Password=NewStrongP@ssw0rd;TrustServerCertificate=True;"
   }
 }
