--- a/.github/workflows/vm-ci.yml
+++ b/.github/workflows/vm-ci.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           dotnet-version: '3.1'
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore Products.sln
       - name: Build
         run: dotnet build --no-restore
       - name: Test
