--- a/.github/workflows/vm-ci.yml
+++ b/.github/workflows/vm-ci.yml
@@ -24,7 +24,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -A
-          git commit -m "Automated commit" -a || echo "No changes to commit"
+          git diff --staged --quiet || git commit -m "Automated commit"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
